# pholio

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  debug_script.py  pyproject.toml  run.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
doc/: README.md  backlog.md  plan.md  roadmap.md
doc/dev/: architecture.md
doc/llm/: reference.md
doc/user/: manuel.md
src/pholio/: __init__.py  build_exe.py  cli.py  config.py  image_utils.py  layout.py  main.py  pdf_export.py  state.py
static/: app.js  index.html  styles.css
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_image_utils.py  test_layout.py  test_pdf_export.py  test_state.py
