[tool.poetry]
name = "pholio"
version = "1.2.1"
description = "Photo album PDF generator with smart layout — web app locale, moteur de mise en page automatique, export PDF haute résolution."
authors = ["David"]
readme = "README.md"
packages = [{include = "pholio", from = "src"}]

[tool.poetry.scripts]
pholio = "pholio.cli:main"
pholio-build = "pholio.build_exe:main"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115"
uvicorn = {extras = ["standard"], version = ">=0.30"}
pillow = ">=10.0"
fpdf2 = ">=2.7"
python-multipart = ">=0.0.9"
pillow-heif = ">=0.18"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"
httpx = ">=0.27"
pytest-cov = ">=5.0"
ruff = ">=0.4"
mypy = ">=1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pholio.layout"
strict = true

[[tool.mypy.overrides]]
module = "pholio.pdf_export"
strict = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = [
    "arg-type",
    "attr-defined",
    "no-untyped-def",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["tests/*"]
